--- a/BlazorTool.Client/Pages/SchedulerPage.razor
+++ b/BlazorTool.Client/Pages/SchedulerPage.razor
@@ -360,7 +360,6 @@
 </TelerikPopup>
 
 @code {
-
     private string SchedulerSettingsKey = ViewSettingsService.SettingsKeys["SchedulerPage"];
     private List<SchedulerAppointment> Appointments { get; set; } = new();
     private List<SchedulerAppointment> _allAppointments { get; set; } = new();
@@ -437,6 +436,9 @@
 
     protected override async Task OnInitializedAsync()
     {
+        Console.WriteLine($"[NAV] SchedulerPage.razor: OnInitializedAsync at {DateTime.Now:HH:mm:ss}");
+        await base.OnInitializedAsync();
+
         _viewSettings = await ViewSettingsService.LoadSettingsAsync<WorkOrder>(SchedulerSettingsKey);
         if (_viewSettings != null)
         {
@@ -465,25 +467,27 @@
         Console.WriteLine("--- HardLoadData started.");
         isLoading = true;
         StateHasChanged();
-        allPersons = await apiService.GetAllPersons();
+        if (!UserState.IsAuthenticated)
+        {
+            Navigation.NavigateTo("/login");
+            return;
+        }
+        // Используем кеш, если он есть
+        allPersons = apiService.GetAllPersonsCached();
+        if (allPersons == null || allPersons.Count == 0)
+            allPersons = await apiService.GetAllPersons();
         Console.WriteLine($"--- HardLoadData: allPersons loaded. Count: {allPersons.Count}");
         PersonsNames = allPersons.Select(c => c.Name).ToList();
         PersonsNames.Insert(0, Person.NotAssigned.Name);
         _allOrders = await apiService.GetWorkOrdersAsync(); //from API, not cache
         cellStyles = RenderStatesStyle(_allOrders);
         ApptService.ClearAppointments(); //clear cache
-        if (!UserState.IsAuthenticated)
-        {
-            Navigation.NavigateTo("/login");
-        }
-
         await apiService.GetWODictionaries(UserState.PersonID, UserState.LangCode);
         WOCategories = apiService.GetWOCategories().Select(c => c.Name).ToList();
         WOStates = apiService.GetWOStates().Select(c => c.Name).ToList();
         currentUser.PersonId = UserState.PersonID ?? -1;
         currentUser.Name = UserState.UserName ?? string.Empty;
         await LoadData();
-
         Console.WriteLine($"--- HardLoadData completed. UntakenOrders count: {UntakenOrders.Count}, Appointments count: {Appointments.Count}");
     }
 
