--- a/BlazorTool.Client/Pages/Settings.razor
+++ b/BlazorTool.Client/Pages/Settings.razor
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <div class="settings-button-center mb-3">
+    <div class="row mb-3">
         <button class="btn btn-primary" @onclick="SaveSettingsAsync">
             @Localizer["Settings_SaveSettings"]
         </button>
@@ -134,8 +134,10 @@
             @StatusMessage
         </div>
     }
+    <div class="row mb-3">
+        <div class="divider my-4"></div>
+    </div>
 </div>
-
 <div class="container mt-4">
     <UserProfileDisplay UserState="@UserState" DisplayNames="@UserProfileDisplayNames" />
 </div>
